[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = cfg_load

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

# keep in sync with cfg_load/_version.py
version = 0.9.0

description = Library for loading configuration files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Machine Learning, Data Science

platforms = Linux

url = https://github.com/MartinThoma/cfg_load
download_url = https://github.com/MartinThoma/cfg_load

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    cfg_load = cfg_load.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --cov=./cfg_load --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = cfg_load
ignore = D105,D107,D203,D212,D413,D417

[flake8]
max-line-length = 80
exclude = tests/*,.tox/*,.nox/*,docs/*,build/*
ignore = E203, E266, E501, W503, SIM106

[mutmut]
backup = False
runner = python -m pytest
tests_dir = tests/

[mypy]
ignore_missing_imports = True
